fix update access of file
